--- a/tools/templates/htmlDocs2/styles.mustache
+++ b/tools/templates/htmlDocs2/styles.mustache
@@ -2,17 +2,13 @@
  * Content
  * ------------------------------------------------------------------------------------------ */
 
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
-* {
-  font-family: 'Source Code Pro', sans-serif;
-}
 body {
   min-width: 980px;
   position:relative;
 }
 
 body, p, a, div, th, td {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: sans-serif;
   font-weight: 400;
   font-size: 16px;
   text-shadow: none !important;
@@ -20,7 +16,7 @@ body, p, a, div, th, td {
 
 td.code {
   font-size: 14px;
-  font-family: "Source Code Pro", monospace;
+  font-family: monospace;
   font-style: normal;
   font-weight: 400;
 }
@@ -36,7 +32,7 @@ p {
 }
 
 h1 {
-  font-family: "Source Sans Pro Semibold", sans-serif;
+  font-family: sans-serif;
   font-weight: normal;
   font-size: 44px;
   line-height: 50px;
@@ -45,7 +41,7 @@ h1 {
 }
 
 h2 {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: sans-serif;
   font-weight: normal;
   font-size: 24px;
   line-height: 40px;
@@ -59,7 +55,7 @@ section {
 }
 
 section h1 {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: sans-serif;
   font-weight: 700;
   font-size: 32px;
   line-height: 40px;
@@ -73,14 +69,14 @@ article {
 }
 
 article h1 {
-  font-family: "Source Sans Pro Bold", sans-serif;
+  font-family: sans-serif;
   font-weight: 600;
   font-size: 24px;
   line-height: 26px;
 }
 
 article h2 {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: sans-serif;
   font-weight: 600;
   font-size: 18px;
   line-height: 24px;
@@ -88,7 +84,7 @@ article h2 {
 }
 
 article h3 {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: sans-serif;
   font-weight: 600;
   font-size: 16px;
   line-height: 18px;
@@ -96,7 +92,7 @@ article h3 {
 }
 
 article h4 {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: sans-serif;
   font-weight: 600;
   font-size: 14px;
   line-height: 16px;
@@ -112,7 +108,7 @@ table {
 th {
   background-color: #f5f5f5;
   text-align: left;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: sans-serif;
   font-weight: 700;
   padding: 4px 8px;
   border: #e0e0e0 1px solid;
@@ -149,7 +145,7 @@ td {
 }
 
 #apidoc h1 {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: sans-serif;
   font-weight: 700;
   font-size: 32px;
   line-height: 40px;
@@ -159,7 +155,7 @@ td {
 }
 
 #apidoc h2 {
-  font-family: "Source Sans Pro Bold", sans-serif;
+  font-family: sans-serif;
   font-weight: 600;
   font-size: 22px;
   line-height: 26px;
@@ -229,7 +225,7 @@ pre.language-api .pun {
 pre code {
   display: block;
   font-size: 14px;
-  font-family: "Source Code Pro", monospace;
+  font-family: monospace;
   font-style: normal;
   font-weight: 400;
 }
@@ -265,7 +261,7 @@ pre code.sample-request-response-json {
   border: 0;
   border-left: transparent 4px solid;
   border-right: transparent 4px solid;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: sans-serif;
   font-weight: 400;
   font-size: 14px;
 }
@@ -274,7 +270,7 @@ pre code.sample-request-response-json {
   padding: 5px 15px;
   border: 1px solid #e5e5e5;
   width: 190px;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: sans-serif;
   font-weight: 700;
   font-size: 16px;
   background-color: #4c8eca;
