--- a/tools/templates/htmlDocs2/index.mustache
+++ b/tools/templates/htmlDocs2/index.mustache
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8" />
   <meta name="description" content="RPC documentation for the chia blockchain {{{endpoint}}} service"/>
-
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   {{>js_prettify}}
   {{>marked}}
