--- a/tools/templates/htmlDocs2/styles.mustache
+++ b/tools/templates/htmlDocs2/styles.mustache
@@ -273,12 +273,12 @@ pre code.sample-request-response-json {
   font-family: sans-serif;
   font-weight: 700;
   font-size: 16px;
-  background-color: #4c8eca;
+  background-color: #3AAC59;
   color: #fff;
 }
 
 .sidenav > li.nav-header.active > a {
-  background-color: #4c8eca;
+  background-color: #3AAC59;
   color: #fff;
 }
 
@@ -288,8 +288,7 @@ pre code.sample-request-response-json {
 }
 
 .sidenav > li > a:hover {
-  background-color: #ffffff;
-  color: black;
+  filter: brightness(125%);
 }
 
 .sidenav > li.has-modifications a {
