--- a/tools/templates/htmlDocs2/index.mustache
+++ b/tools/templates/htmlDocs2/index.mustache
@@ -154,15 +154,12 @@
                         <p class="http-method" data-type="{{httpMethod}}">{{httpMethod}}</p>
                         <pre class="prettyprint language-html prettyprinted" data-type="{{httpMethod}}"><code><span class="pln">{{path}}</span></code></pre>
                         
-                          <h3>Usage</h3>
-                        
-                        <ul class="nav nav-tabs nav-tabs-examples">
-                          <li class="active"><span href="#examples-{{baseName}}-{{nickname}}-0-curl">Curl</span></li>
-                        </ul>
+                        <h3>Usage</h3>
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-{{baseName}}-{{nickname}}-0-curl">
                            <pre class="prettyprint"><code class="language-bsh">curl -X {{vendorExtensions.x-codegen-httpMethodUpperCase}} \
---insecure --cert ~/.chia/mainnet/config/ssl/{{{endpoint}}}/private_{{{endpoint}}}.crt --key ~/.chia/mainnet/config/ssl/{{{endpoint}}}/private_{{{endpoint}}}.key {{#hasProduces}}\
+--insecure --cert ~/.chia/mainnet/config/ssl/{{{endpoint}}}/private_{{{endpoint}}}.crt \
+--key ~/.chia/mainnet/config/ssl/{{{endpoint}}}/private_{{{endpoint}}}.key {{#hasProduces}} \
 -H "Accept: {{#produces}}{{{mediaType}}}{{#hasMore}},{{/hasMore}}{{/produces}}"{{/hasProduces}}{{#hasConsumes}} \
 -H "Content-Type: {{#consumes}}{{{mediaType}}}{{#hasMore}},{{/hasMore}}{{/consumes}}"{{/hasConsumes}} \
 "{{basePath}}{{path}}{{#hasQueryParams}}?{{#queryParams}}{{^@first}}&{{/@first}}{{baseName}}={{vendorExtensions.x-eg}}{{/queryParams}}{{/hasQueryParams}}" \
