--- a/tools/templates/htmlDocs2/styles.mustache
+++ b/tools/templates/htmlDocs2/styles.mustache
@@ -213,6 +213,10 @@ p.http-method[data-type="delete"] {
   background-color: #ed0039;
 }
 
+p.http-method[data-type="websocket"] {
+  background-color: red;
+}
+
 pre.language-api .str {
   color: #ffffff;
 }
