--- a/tools/templates/htmlDocs2/index.mustache
+++ b/tools/templates/htmlDocs2/index.mustache
@@ -166,7 +166,7 @@
   'command': '<span class="rpc_command_name">{{path}}</span>', 
   'data': {}, 
   'destination': 'daemon', 
-  'origin': 'client'_app_id, 
+  'origin': 'client_app_id', 
   'request_id': 'unique message correlation id'
 }</code></pre>
                         {{else}}        
